# django-start-tool

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
django_start_tool/: __main__.py  handler.py  types.py  utils.py
