[metadata]
name = django-start-tool
version = attr: django_start_tool.__version__
url = https://github.com/solarless/django-start-tool/
author = Georgy Gnezdilov
description = Full-featured django project start tool.
long_description = file: README.rst
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]    
python_requires = >=3.8
packages = find:
include_package_data = true
install_requires =
    Jinja2 >= 3.0.3

[options.entry_points]
console_scripts =
    django-start = django_start_tool.__main__:main
